# infino

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discuss_or_question.md  feature_request.md
.github/workflows/: build-and-test.yml  post-merge-ci.yml
benches/: Cargo.toml  README.md
benches/config/: default.toml
benches/src/: main.rs
benches/src/engine/: elasticsearch.rs  infino.rs  mod.rs  tantivy.rs
benches/src/timeseries/: infino.rs  mod.rs  prometheus.rs
benches/src/utils/: io.rs
config/: default.toml
examples/datasets/: README.md
examples/fluentbit/: README.md  apache-log.conf  parsers.conf  time-series-cpu.conf
src/: main.rs
src/queue_manager/: queue.rs
src/utils/: docker.rs  error.rs  mod.rs  settings.rs  shutdown.rs
tsldb/: Cargo.toml  Makefile  lib.rs
tsldb/config/: default.toml
tsldb/src/: lib.rs
tsldb/src/index_manager/: index.rs  metadata.rs
tsldb/src/log/: constants.rs  log_message.rs  mod.rs  postings_block.rs  postings_block_compressed.rs  postings_list.rs
tsldb/src/segment_manager/: metadata.rs  mod.rs  segment.rs
tsldb/src/ts/: constants.rs  data_point.rs  mod.rs  time_series.rs  time_series_block.rs  time_series_block_compressed.rs  tsutils.rs
tsldb/src/utils/: config.rs  custom_serde.rs  error.rs  io.rs  mod.rs  range.rs  serialize.rs  sync.rs
tsldb/tests/: loom.rs
