[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
elasticsearch = "8.5.0-alpha.1"
fs_extra = "1.2.0"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
url = "2.3.1"
uuid = "1.2.2"
tantivy = "0.19.2"
tempfile = "*"
tempdir = "*"
prometheus = "0.10.0"
warp = "*"
sysinfo = "0.17.3"
reqwest = "0.11.17"

[dependencies.tsldb]
path = "../tsldb"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]
